--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: vicalcantfrontend/ipe-services
 
 jobs:
   build:
@@ -48,6 +48,7 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
             cd /opt/ipe-services
+            # Iniciar sesión para poder descargar la imagen privada
             docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
             docker compose -f docker-compose.prod.yml up -d --force-recreate api
             docker image prune -f
