feat: Implement comprehensive authentication module with JWT, email verification, password reset, and Redis-backed token blacklisting, including Docker Compose updates for Redis health checks.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
       - ipe_network
     depends_on:
       redis:
-        condition: service_started
+        condition: service_healthy
     restart: unless-stopped
     healthcheck:
       test: ['CMD', 'wget', '-q', '--spider', 'http://localhost:3000/api/v1/health/live']
@@ -25,6 +25,11 @@ services:
       - redis_data:/data
     networks:
       - ipe_network
+    healthcheck:
+      test: ['CMD', 'redis-cli', 'ping']
+      interval: 10s
+      timeout: 5s
+      retries: 5
     restart: unless-stopped
 
 volumes:
