--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,11 @@ JWT_ACCESS_SECRET=your-super-secret-access-key-at-least-32-chars
 JWT_ACCESS_EXPIRATION=15m
 JWT_REFRESH_SECRET=your-super-secret-refresh-key-at-least-32-chars
 JWT_REFRESH_EXPIRATION=7d
+
+# ============================================================
+# REDIS
+# ============================================================
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
